: Added the ability to create user groups and restrict project visibility based
  on those groups.
: When a bug is filed against a component with an owner, that owner will be 
  assigned the bug and receive an email about the bug.
: Fixed a bug preventing users from being assigned to the User group when 
  created.
: Fixed a bug with the download option of the installation process.

-- 0.5.1 -- 11 Nov 2001
: Fixed a bug (introduced in 0.5.0) with severity color not being pulled in
  with the bug list database query.

-- 0.5.0 -- 9 Nov 2001
: Fixed a bug with the bug history update.
: Added web-based installation.
: Added on option for choosing whether bugs can be changed by anyone or only by 
	the bug reporter, bug owner, managers, or admins.
: Added a printable view for bugs.
: Added an upgrade script to upgrade from the last major version.
: Added an option to disable newaccount.php, thus preventing users from
  creating accounts for themselves.

-- 0.4.0 -- 18 Oct 2001
: Improved the CSS file to make choosing different color schemes easier.
: Consolidated the two separate templates directories into one tree.
: Fixed a bug with the OS table creation.
: Moved configuration information to the database; dropped the configure script.
: Added the ability to search by login as well as email.
: First release of documentation.

-- 0.3.3 -- 2 Oct 2001
: Added the ability to enter cvs:filename.ext or cvs:path/filename.ext:v.vv
  into the bug comments and have that linked to a CVS web interface.
: Fixed bugs with project administration, account creation, and the initial 
  database installation.

-- 0.3.2 -- 28 Sep 2001
: Added patch and patch instructions for page.inc (in PHPlib).
: Tried to make the configure script a little more portable.
: Users can now add CCs to bug change notifications.
: Fixed some bugs with bug updating.

-- 0.3.1 -- 17 Sep 2001
: Fixed the perm and group checks.
: Fixed a bug when selecting an OS in the bug query.