@@ -46,7 +46,7 @@
     <td class="login-box">
       <form method="post" action="{me2}">
         <font color="{loginerrorcolor}"><b>{loginerror}<b></font>
-        Email: <input type="text" name="username" class="login-box">
+        {loginlabel}: <input type="text" name="username" class="login-box">
         Password: <input type="password" name="password" class="login-box">
         <!--<input type="image" border="0" name="login" value="doit" src="go.gif" width="30" height="20" align="middle" class="login-button">-->
         <input type="hidden" name="login" value="1">
