@@ -45,7 +45,7 @@
 		<td class="login-box" nowrap>
 			<form method="post" action="{me2}">
 				<font color="{loginerrorcolor}"><b>{loginerror}<b></font> 
-				Email: <input type="text" name="username" class="login-box"> 
+				{loginlabel}: <input type="text" name="username" class="login-box"> 
 				Password: <input type="password" name="password" class="login-box"> 
 				<input type="hidden" name="dologin" value="1">
 				<input type="submit" value="Login" class="login-box"> 
