@@ -18,6 +18,8 @@
 : Fixed a bug preventing users from being assigned to the User group when 
   created.
 : Fixed a bug with the download option of the installation process.
+: Change the label on the login box from Email to Login if configuration
+  option EMAIL_IS_LOGIN is not true.
 
 -- 0.5.1 -- 11 Nov 2001
 : Fixed a bug (introduced in 0.5.0) with severity color not being pulled in
